--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <body>
         <header>
             <!-- Heading 1 for main title -->
-            <h1>Project Team 11</h1>
+            <h1 style="color: sage;">Project Team 11</h1>
             
             <!-- Navigation section -->
             <nav>
