--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <!-- Title of the page -->
-        <title>Project Team 11</title>
+    <title style="color: blue;">Project Team 11</title>
+</head>
         
         <!-- Link to external stylesheet -->
         <link rel="stylesheet" type="text/css" href="style.css" media="screen">
