Co-authored-by: Miny-oung-K <Miny-oung-K@users.noreply.github.com> Co-authored-by: amandashiii <amandashiii@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- The HTML document declaration -->
 
-
+<!---->
 <html lang="en">
     <head>
         <!-- Meta tags for character set, description, and viewport settings -->
@@ -12,7 +12,7 @@
         <!-- Title of the page -->
     <title style="color: blue;">Project Team 11</title>
 </head>
-        
+        <!-- comment :))-->
         <!-- Link to external stylesheet -->
         <link rel="stylesheet" type="text/css" href="style.css" media="screen">
     </head>
