added the chat bot

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <!-- Link to external stylesheet -->
         <link rel="stylesheet" type="text/css" href="style.css" media="screen">
     </head>
+    <script src="//code.tidio.co/w1nwgrp7bxdnw03viheof51qks2cswab.js" async></script>
     <body>
         <header>
             <!-- Heading 1 for main title -->
